crates/plotnik-lib/tests/02-parser/recovery_incomplete/field_value_is_garbage.txt
Q = (call name: %%%)
------------------ DIAGNOSTICS -------------------
error: expected an expression
 --> query.ptk:1:17
  |
1 | Q = (call name: %%%)
  |                 ^^^
  |
help: an expression is a node `(kind)`, anonymous node `"text"`, sequence `{...}`, or alternation `[...]`
